objects/Venue_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of Event Management so we can include Venue Payments as a related list on the Advisory Event.</description>
        <label>Advisory Event</label>
        <referenceTo>Advisory_Event__c</referenceTo>
        <relationshipLabel>Venue Payments</relationshipLabel>
        <relationshipName>Venue_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of Event Management.</description>
        <label>Authorized By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Venue Payments</relationshipLabel>
        <relationshipName>Venue_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Venue Payments</relationshipLabel>
        <relationshipName>Venue_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Form_of_Payment__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Form of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_To__c</fullName>
        <description>Created as part of Event Management.</description>
        <label>Paid To</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Venue Payment</label>
    <nameField>
        <displayFormat>VP-{0}</displayFormat>
        <label>Venue Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Form_of_Payment</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    ISBLANK( TEXT(Form_of_Payment__c) ),
    NOT( ISBLANK( Date_Paid__c ) )
)</errorConditionFormula>
        <errorDisplayField>Form_of_Payment__c</errorDisplayField>
        <errorMessage>You must indicate the Form of Payment when Date Paid is populated.</errorMessage>
    </validationRules>
</CustomObject>